Selesai menyeting darkMode

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
     <!-- Landing page web -->
     <!-- header -->
     <!-- This is an example component -->
-    <header id="beranda" class="">
+    <header id="beranda">
         <div class="container ">
             <nav class="border-gray-200 px-2 mb-10 invisible font-header " id="nav">
                 <div
