--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,7 @@
     <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css" />
     <link rel="stylesheet" href="../node_modules/aos/dist/aos.css">
     <script src="../node_modules/flowbite/dist/flowbite.js" type="text/javascript" defer></script>
-    <script src="./src/index.js" type="text/javascript" defer></script>
     <script src="./src/aos.js" type="text/javascript" defer></script>
-
 </head>
 
 <body class="box-border overflow-hidden bg-Theme dark:bg-slate-800" id="body">
@@ -798,7 +796,9 @@
             </div>
         </div>
     </main>
+    <!-- script in bottom,in top not responding:( ) -->
     <script src="../node_modules/aos/dist/aos.js" type="text/javascript"></script>
+    <script src="./src/index.js" type="text/javascript"></script>
 </body>
 
 </html>
