--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,6 @@
     <!-- Javascript Eksternal & librayJS -->
     <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css" />
     <link rel="stylesheet" href="../node_modules/aos/dist/aos.css">
-    <script src="../node_modules/flowbite/dist/flowbite.js" type="text/javascript" defer></script>
-    <script src="./src/aos.js" type="text/javascript" defer></script>
 </head>
 
 <body class="box-border overflow-hidden bg-Theme dark:bg-slate-800" id="body">
@@ -36,8 +34,8 @@
     </div>
     <!-- Form login to acces web landing page -->
     <div class="flex justify-center items-center h-screen hidden-me" id="form_login">
-        <div class="p-4 max-w-sm bg-white rounded-lg border border-gray-200 shadow-m sm:p-6 lg:p-8 dark:bg-gray-800 dark:border-gray-700"
-            id="form">
+        <div
+            class="p-4 max-w-sm bg-white rounded-lg border border-gray-200 shadow-m sm:p-6 lg:p-8 dark:bg-gray-800 dark:border-gray-700">
             <form class="space-y-6" action="#">
                 <h5 class="text-xl font-medium text-gray-900 dark:text-white">
                     Sign in to our platform
@@ -261,7 +259,7 @@
                 </div>
             </div>
             <!-- header Fitur -->
-            <div class="flex flex-col justify-center items-center text-center py-[6.25rem]" id="fitur">
+            <div class="flex flex-col justify-center items-center text-center py-[6.25rem] scroll-mt-28" id="fitur">
                 <div>
                     <h1 class="font-header font-semibold text-sm tracking-widest text-secondary dark:text-white">
                         NGGAK HARUS SIH SEBENERNYA
@@ -335,7 +333,8 @@
             </div>
             <!-- mockup preview -->
             <div class="h-[50rem] block lg:h-[10rem]"></div>
-            <div class="pb-[6.25rem]  lg:flex lg:flex-row lg:justify-between lg:items-center" id="teknologi">
+            <div class="pb-[6.25rem]  lg:flex lg:flex-row lg:justify-between lg:items-center scroll-mt-36"
+                id="teknologi">
                 <!-- mockup -->
                 <div class="flex flex-col justify-center items-center w-full sticky lg:w-1/2" data-aos="fade-up">
                     <div>
@@ -381,7 +380,7 @@
                                 Kamu Adalah Beban Kami
                             </h1>
                             <p
-                                class="font-header font-normal text-base text-secondary opacity-60 order-4  dark:text-primary2">
+                                class="font-header font-normal text-base text-secondary opacity-60 order-4 px-8  dark:text-primary2">
                                 Semakin banyak kamu yang mendaftar di aplikasi ini, artinya
                                 semakin banyak data yang perlu disimpan, nah kan jadi perlu
                                 server gede tuh. Makanya kamu beban!
@@ -405,7 +404,7 @@
                                 Males Buat Ngembangin
                             </h1>
                             <p
-                                class="font-header font-normal text-base text-secondary opacity-60 order-4 lg:pr-8  dark:text-primary2">
+                                class="font-header font-normal text-base text-secondary opacity-60 order-4 px-8 lg:pr-8  dark:text-primary2">
                                 Lo bakal nemu bug, entah pesan yang mau dikirim gak bisa
                                 dikirim padahal lo belom pencet tombol enter atau masalah
                                 lainnya. Nah soal itu kita males buat benerin.
@@ -430,7 +429,7 @@
                                 Pokoknya Males Aja Lah
                             </h1>
                             <p
-                                class="font-header font-normal text-base text-secondary opacity-60 order-4 lg:pr-8  dark:text-primary2">
+                                class="font-header font-normal text-base text-secondary opacity-60 order-4 px-8 lg:pr-8  dark:text-primary2">
                                 Nggak tau lagi harus ngomong apa, pokoknya males aja sih kita
                                 bikin aplikasi chat kek gini. Makannya mending lo pake
                                 WhatsApp aja udah.
@@ -440,7 +439,7 @@
                 </div>
             </div>
             <!-- about section -->
-            <div class="px-10 md:px-20 md:pt-[10rem]" id="about">
+            <div class="px-10 md:px-20 md:pt-[10rem] scroll-mt-36" id="about">
                 <figure
                     class="group cursor-pointer mt-[30rem] md:flex bg-bg-icon rounded-xl p-8 md:p-0 md:m-0 dark:bg-slate-800 dark:opacity-90">
                     <img src="./asset/image (1).png" alt="profil" width="384" height="512" class="w-24 h-24 blur-lg border border-slate-300 shadow shadow-slate-300 transition-all ease-in-out duration-500 group-hover:blur-0 md:w-48 md:h-auto rounded-full mx-auto md:rounded-none
@@ -464,7 +463,7 @@
             </div>
             <!-- accordion deksripsi -->
             <div class="py-[6.25rem]"></div>
-            <div class="flex flex-col justify-center items-center py-[6.25rem]" id="faq">
+            <div class="flex flex-col justify-center items-center py-[6.25rem] scroll-mt-32" id="faq">
                 <!-- deskripsi -->
                 <h1
                     class="font-header font-semibold text-sm tracking-widest text-center text-secondary opacity-100 dark:text-primary2hover">
@@ -475,7 +474,7 @@
                     Pertanyaan Yang Sering Ditanyain
                 </h2>
                 <p
-                    class="font-header font-normal text-base text-center text-accordion order-4 lg:px-64 dark:text-primary2">
+                    class="font-header font-normal text-base text-center text-accordion order-4 px-8 lg:px-64 dark:text-primary2">
                     Sebenernya pertanyaan-pertanyaan ini kagak ada yang nanya sih, tapi
                     ya ditaruh sini aja siapa tau lo mau baca ‘kan.
                 </p>
@@ -798,6 +797,8 @@
     </main>
     <!-- script in bottom,in top not responding:( ) -->
     <script src="../node_modules/aos/dist/aos.js" type="text/javascript"></script>
+    <script src="./src/aos.js" type="text/javascript"></script>
+    <script src="../node_modules/flowbite/dist/flowbite.js" type="text/javascript"></script>
     <script src="./src/index.js" type="text/javascript"></script>
 </body>
 
