--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet" />
     <!-- Core Css(Tailwindcss) -->
     <link rel="stylesheet" href="./src/style.css" />
-
     <!-- Javascript Eksternal & librayJS -->
     <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="./src/index.js" type="text/javascript" defer></script>
 </head>
 
 <body class="box-border overflow-hidden bg-Theme dark:bg-slate-800" id="body">
@@ -72,7 +72,7 @@
             <div
                 class="fixed container backdrop-blur-md w-[95%] z-[999]  mx-auto flex flex-wrap items-center justify-between rounded-xl lg:w-[98%]">
                 <a href="#beranda" class="flex">
-                    <svg class="h-10 mr-3" width="51" height="70" viewBox="0 0 51 70" fill="none"
+                    <!-- <svg class="h-10 mr-3" width="51" height="70" viewBox="0 0 51 70" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0)">
                             <path d="M1 53H27.9022C40.6587 53 51 42.7025 51 30H24.0978C11.3412 30 1 40.2975 1 53Z"
@@ -88,8 +88,14 @@
                                 <rect width="51" height="70" fill="white"></rect>
                             </clipPath>
                         </defs>
+                    </svg> -->
+                    <svg class="h-10 mr-3 fill-primary dark:fill-primary2" width="51" height="70"
+                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                        <path
+                            d="M0 190.9V185.1C0 115.2 50.52 55.58 119.4 44.1C164.1 36.51 211.4 51.37 244 84.02L256 96L267.1 84.02C300.6 51.37 347 36.51 392.6 44.1C461.5 55.58 512 115.2 512 185.1V190.9C512 232.4 494.8 272.1 464.4 300.4L283.7 469.1C276.2 476.1 266.3 480 256 480C245.7 480 235.8 476.1 228.3 469.1L47.59 300.4C17.23 272.1 .0003 232.4 .0003 190.9L0 190.9z" />
                     </svg>
-                    <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">FlowBite</span>
+                    <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Expression</span>
                 </a>
                 <div class="flex  md:order-2">
                     <div class="relative mr-3 md:mr-0 hidden md:block">
@@ -107,11 +113,14 @@
                         aria-controls="mobile-menu-3" aria-expanded="false" id="hamburger">
                         <span class="sr-only">Open main menu</span>
                         <div class="flex flex-col items-end ">
-                            <p class="bg-gray-400 transition duration-300 ease-in-out w-[30px] h-2 rounded-lg ">
+                            <p
+                                class="bg-blue-600 transition duration-300 ease-in-out w-[30px] h-2 rounded-lg dark:bg-primary2 dark:active:bg-primary2hover ">
                             </p>
-                            <p class="bg-gray-400 transition duration-300 ease-in-out w-4 h-2 my-1 rounded-lg  ">
+                            <p
+                                class="bg-blue-600 transition duration-300 ease-in-out w-4 h-2 my-1 rounded-lg  dark:bg-primary2 dark:active:bg-primary2hover">
                             </p>
-                            <p class="bg-gray-400 transition duration-300 ease-in-out w-2 h-2 rounded-lg ">
+                            <p
+                                class="bg-blue-600 transition duration-300 ease-in-out w-2 h-2 rounded-lg dark:bg-primary2 dark:active:bg-primary2hover">
                             </p>
                         </div>
                         <svg class="w-6 h-6 hidden" id="hamburger" fill="currentColor" viewBox="0 0 20 20"
@@ -133,30 +142,30 @@
                     <ul class="flex-col md:flex-row flex md:space-x-8 mt-4 md:mt-0 md:text-sm md:font-medium">
                         <li>
                             <a href="#beranda"
-                                class="link bg-primary font-header font-semibold text-base md:bg-transparent text-white block pl-3 pr-4 py-2 md:text-primary md:p-0 rounded dark:text-slate-50 dark:hover:text-slate-100"
+                                class="link bg-primary font-header font-semibold text-base md:bg-transparent text-white block pl-3 pr-4 py-2 md:text-primary md:p-0 rounded dark:bg-slate-700 dark:text-slate-50 dark:hover:text-slate-100 lg:dark:bg-transparent "
                                 aria-current="page">Beranda</a>
                         </li>
                         <li>
                             <a href="#fitur"
-                                class="link font-header text-gray-700 text-base font-normal hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-primary md:p-0 dark:text-primary2hover dark:hover:text-slate-50">
+                                class="link font-header text-gray-700 text-base font-normal hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-primary md:p-0 dark:hover:bg-slate-600 dark:text-primary2hover dark:hover:text-slate-50 dark:border-slate-600 ">
                                 Fitur-fitur
                             </a>
                         </li>
                         <li>
                             <a href="#teknologi"
-                                class="link font-header text-gray-700 text-base font-normal hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-primary md:p-0 dark:text-primary2hover dark:hover:text-slate-50">
+                                class="link font-header text-gray-700 text-base font-normal hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-primary md:p-0 dark:hover:bg-slate-600 dark:text-primary2hover dark:hover:text-slate-50 dark:border-slate-600 ">
                                 Teknologi
                             </a>
                         </li>
                         <li>
                             <a href="#about"
-                                class="link font-header text-gray-700 text-base font-normal hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-primary md:p-0 dark:text-primary2hover dark:hover:text-slate-50">
+                                class="link font-header text-gray-700 text-base font-normal hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-primary md:p-0 dark:hover:bg-slate-600 dark:text-primary2hover dark:hover:text-slate-50 dark:border-slate-600 ">
                                 About
                             </a>
                         </li>
                         <li>
                             <a href="#faq"
-                                class="link font-header text-gray-700 text-base font-normal hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-primary md:p-0 dark:text-primary2hover dark:hover:text-slate-50">
+                                class="link font-header text-gray-700 text-base font-normal hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-primary md:p-0 dark:hover:bg-slate-600 dark:text-primary2hover dark:hover:text-slate-50 dark:border-slate-600 ">
                                 FAQ
                             </a>
                         </li>
@@ -169,7 +178,7 @@
                                 </button>
                             </a>
                         </li>
-
+                        <!-- Darkmode -->
                         <label for="default-toggle" class="inline-flex relative items-center cursor-pointer">
                             <input type="checkbox" value="" id="default-toggle" class="sr-only peer">
                             <div
@@ -232,7 +241,8 @@
                 <!-- Mockup mobile -->
                 <div class="flex flex-col py-8 w-full lg:w-1/2">
                     <figure>
-                        <img src="./asset/mockup.svg" alt="mockup" class="animate__animated  animate__fadeInUp" />
+                        <img src="./asset/mockup/mockup.svg" alt="mockup"
+                            class="animate__animated  animate__fadeInUp" />
                     </figure>
                 </div>
             </div>
@@ -332,7 +342,7 @@
                 </div>
             </div>
             <!-- mockup preview -->
-            <div class="h-[50rem] block lg:h-[10rem]"></div>
+            <div class="h-[60rem] block lg:h-[20rem]"></div>
             <div class="pb-[6.25rem]  lg:flex lg:flex-row lg:justify-between lg:items-center scroll-mt-36"
                 id="teknologi">
                 <!-- mockup -->
@@ -439,10 +449,10 @@
                 </div>
             </div>
             <!-- about section -->
-            <div class="px-10 md:px-20 md:pt-[10rem] scroll-mt-36" id="about">
+            <div class="px-10 pt-32 md:px-20 md:pt-[10rem] scroll-mt-36" id="about">
                 <figure
                     class="group cursor-pointer mt-[30rem] md:flex bg-bg-icon rounded-xl p-8 md:p-0 md:m-0 dark:bg-slate-800 dark:opacity-90">
-                    <img src="./asset/image (1).png" alt="profil" width="384" height="512" class="w-24 h-24 blur-lg border border-slate-300 shadow shadow-slate-300 transition-all ease-in-out duration-500 group-hover:blur-0 md:w-48 md:h-auto rounded-full mx-auto md:rounded-none
+                    <img src="./asset/profil/image (1).png" alt="profil" width="384" height="512" class="w-24 h-24 blur-lg border border-slate-300 shadow shadow-slate-300 transition-all ease-in-out duration-500 group-hover:blur-0 md:w-48 md:h-auto rounded-full mx-auto md:rounded-none
                                 dark:border-0 dark:border-slate-800 " />
                     <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
                         <blockquote>
@@ -661,26 +671,15 @@
                 <div class="flex flex-col items-start gap-[30px] lg:flex-row">
                     <div class="flex flex-col items-start gap-5 lg:w-[27rem] lg:gap-2">
                         <div class="flex flex-row items-center gap-[10px]">
-                            <svg width="30" height="30" viewBox="0 0 51 70" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <g clip-path="url(#clip0)">
-                                    <path
-                                        d="M1 53H27.9022C40.6587 53 51 42.7025 51 30H24.0978C11.3412 30 1 40.2975 1 53Z"
-                                        fill="#76A9FA"></path>
-                                    <path
-                                        d="M-0.876544 32.1644L-0.876544 66.411C11.9849 66.411 22.4111 55.9847 22.4111 43.1233L22.4111 8.87674C10.1196 8.98051 0.518714 19.5571 -0.876544 32.1644Z"
-                                        fill="#A4CAFE"></path>
-                                    <path d="M50 5H23.0978C10.3413 5 0 15.2975 0 28H26.9022C39.6588 28 50 17.7025 50 5Z"
-                                        fill="#1C64F2"></path>
-                                </g>
-                                <defs>
-                                    <clipPath id="clip0">
-                                        <rect width="51" height="70" fill="white"></rect>
-                                    </clipPath>
-                                </defs>
+                            <svg class="h-10 mr-3 fill-primary dark:fill-primary2" width="51" height="70"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                                <path
+                                    d="M0 190.9V185.1C0 115.2 50.52 55.58 119.4 44.1C164.1 36.51 211.4 51.37 244 84.02L256 96L267.1 84.02C300.6 51.37 347 36.51 392.6 44.1C461.5 55.58 512 115.2 512 185.1V190.9C512 232.4 494.8 272.1 464.4 300.4L283.7 469.1C276.2 476.1 266.3 480 256 480C245.7 480 235.8 476.1 228.3 469.1L47.59 300.4C17.23 272.1 .0003 232.4 .0003 190.9L0 190.9z" />
                             </svg>
-                            <h1 class="font-main font-medium text-base text-black order-1 dark:text-primary2hover">
-                                Chat N’ Rechat
+
+                            <h1 class="font-main font-semibold text-base text-black order-1 dark:text-white">
+                                Expression
                             </h1>
                         </div>
                         <p class="font-header font-normal text-base text-accordion order-1 dark:text-white">
@@ -694,29 +693,29 @@
                         </p>
                     </div>
                     <div class="flex flex-col items-start gap-4 order-1 flex-grow lg:gap-2">
-                        <h1 class="font-main font-medium text-lg text-black dark:text-primary2hover">Sitemap</h1>
+                        <h1 class="font-main font-semibold text-lg text-black dark:text-white">Sitemap</h1>
                         <div class="flex flex-col items-start gap-[10px] order-1">
                             <ul class="flex flex-col gap-4">
-                                <li class="font-header font-semibold text-base text-accordion dark:text-white">
+                                <li class="font-header font-normal text-base text-accordion dark:text-white">
                                     <a href="#beranda">Beranda</a>
                                 </li>
-                                <li class="font-header font-semibold text-base text-accordion dark:text-white">
+                                <li class="font-header font-normal text-base text-accordion dark:text-white">
                                     <a href="#fitur">Fitur-fitur</a>
                                 </li>
-                                <li class="font-header font-semibold text-base text-accordion dark:text-white">
+                                <li class="font-header font-normal text-base text-accordion dark:text-white">
                                     <a href="#teknologi">Teknologi</a>
                                 </li>
-                                <li class="font-header font-semibold text-base text-accordion dark:text-white">
+                                <li class="font-header font-normal text-base text-accordion dark:text-white">
                                     <a href="#about">About</a>
                                 </li>
-                                <li class="font-header font-semibold text-base text-accordion dark:text-white">
+                                <li class="font-header font-normal text-base text-accordion dark:text-white">
                                     <a href="#faq">FAQ</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="flex flex-col items-start gap-5 order-2 flex-grow lg:gap-2">
-                        <h1 class="font-main font-medium text-lg text-black dark:text-primary2hover">
+                        <h1 class="font-main font-semibold text-lg text-black dark:text-white">
                             Tetep Terhubung
                         </h1>
                         <p
@@ -725,7 +724,7 @@
                         </p>
                         <div class="flex flex-row justify-center items-center gap-[10px] order-2">
                             <div
-                                class="group flex flex-row justify-center items-center p-2 gap-[10px] w-10 h-10 bg-bg-icon rounded-md cursor-pointer transition-all duration-1000">
+                                class="group flex flex-row justify-center items-center p-2 gap-[10px] w-10 h-10 bg-bg-icon rounded-md cursor-pointer transition-all duration-1000 dark:bg-slate-700">
                                 <a href="https://www.instagram.com/dimas_okr/?hl=id" target="_blank">
                                     <svg class="group-hover:fill-white dark:fill-primary2 dark:group-hover:fill-slate-400"
                                         width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -745,7 +744,7 @@
 
                             </div>
                             <div
-                                class="group flex flex-row justify-center items-center p-2 gap-[10px] w-10 h-10 bg-bg-icon rounded-md transition-all duration-1000 cursor-pointer">
+                                class="group flex flex-row justify-center items-center p-2 gap-[10px] w-10 h-10 bg-bg-icon rounded-md transition-all duration-1000 cursor-pointer dark:bg-slate-700">
                                 <a href="https://www.facebook.com/dimas.oktavian.5055" target="_blank">
                                     <svg class="group-hover:fill-white  dark:fill-primary2 dark:group-hover:fill-slate-400"
                                         width="24" height="24" viewBox="0 0 24 31" fill="none"
@@ -779,7 +778,7 @@
 
                             </div>
                             <div
-                                class="group flex flex-row justify-center items-center p-2 gap-[10px] w-10 h-10 bg-bg-icon rounded-md transition-all duration-1000 cursor-pointer">
+                                class="group flex flex-row justify-center items-center p-2 gap-[10px] w-10 h-10 bg-bg-icon rounded-md transition-all duration-1000 cursor-pointer dark:bg-slate-700">
                                 <a href="https://github.com/Dimas-oktavian17" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                         class="bi bi-github group-hover:fill-white  dark:fill-primary2 dark:group-hover:fill-slate-400"
@@ -795,10 +794,8 @@
             </div>
         </div>
     </main>
-    <!-- script in bottom,in top not responding:( ) -->
-
+    <!-- For libray js -->
     <script src="../node_modules/flowbite/dist/flowbite.js" type="text/javascript"></script>
-    <script src="./src/index.js" type="text/javascript"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
