--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <script src="./src/index.js" type="text/javascript" defer></script>
 </head>
 
-<body class="box-border overflow-hidden bg-Theme dark:bg-slate-800" id="body">
+<body class="box-border overflo w-hidden bg-Theme dark:bg-slate-800" id="body">
     <!-- Bounce for loading set interval -->
     <div class="flex justify-center items-center h-screen" id="bounce">
         <div class="relative ease-in-out w-32 h-32 bg-[#4A72FF] shadow-2xl shadow-blue-400 rounded-full" id="loading">
@@ -663,7 +663,7 @@
                 </div>
             </div>
             <div class="h-[70rem] lg:h-[40rem]"></div>
-            <!-- ekspresi -->
+            <!-- ekspresi (ungkapan perasaan) -->
             <div class="flex flex-col justify-center items-center py-[6.25rem] gap-[10px]">
                 <div
                     class="flex flex-col items-center
