revisi bagian section ekspresi

--- a/public/index.html
+++ b/public/index.html
@@ -674,7 +674,7 @@
                             <h1 class="font-header font-semibold text-base tracking-widest text-white order-1">
                                 Expression
                             </h1>
-                            <h2 class="font-main font-normal text-[28px] leading-10 text-white order-2">Download
+                            <h2 class="font-main font-normal text-[28px] leading-10 text-white order-2">
                                 Jadi apakah Lisa mau menjalin hubungan dengan Dimas?
                             </h2>
                             <div class="h-[10px] order-3"></div>
