add smoth scroling

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="dark scroll-smooth">
 
 <head>
     <meta charset="UTF-8" />
@@ -75,22 +75,22 @@
                 class="fixed container backdrop-blur-md w-[95%] z-[999]  mx-auto flex flex-wrap items-center justify-between rounded-xl lg:w-[98%]">
                 <a href="#beranda" class="flex">
                     <!-- <svg class="h-10 mr-3" width="51" height="70" viewBox="0 0 51 70" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0)">
-                            <path d="M1 53H27.9022C40.6587 53 51 42.7025 51 30H24.0978C11.3412 30 1 40.2975 1 53Z"
-                                fill="#76A9FA"></path>
-                            <path
-                                d="M-0.876544 32.1644L-0.876544 66.411C11.9849 66.411 22.4111 55.9847 22.4111 43.1233L22.4111 8.87674C10.1196 8.98051 0.518714 19.5571 -0.876544 32.1644Z"
-                                fill="#A4CAFE"></path>
-                            <path d="M50 5H23.0978C10.3413 5 0 15.2975 0 28H26.9022C39.6588 28 50 17.7025 50 5Z"
-                                fill="#1C64F2"></path>
-                        </g>
-                        <defs>
-                            <clipPath id="clip0">
-                                <rect width="51" height="70" fill="white"></rect>
-                            </clipPath>
-                        </defs>
-                    </svg> -->
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0)">
+                                <path d="M1 53H27.9022C40.6587 53 51 42.7025 51 30H24.0978C11.3412 30 1 40.2975 1 53Z"
+                                    fill="#76A9FA"></path>
+                                <path
+                                    d="M-0.876544 32.1644L-0.876544 66.411C11.9849 66.411 22.4111 55.9847 22.4111 43.1233L22.4111 8.87674C10.1196 8.98051 0.518714 19.5571 -0.876544 32.1644Z"
+                                    fill="#A4CAFE"></path>
+                                <path d="M50 5H23.0978C10.3413 5 0 15.2975 0 28H26.9022C39.6588 28 50 17.7025 50 5Z"
+                                    fill="#1C64F2"></path>
+                            </g>
+                            <defs>
+                                <clipPath id="clip0">
+                                    <rect width="51" height="70" fill="white"></rect>
+                                </clipPath>
+                            </defs>
+                        </svg> -->
                     <svg class="h-10 mr-3 fill-primary dark:fill-primary2" width="51" height="70"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                         <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
@@ -685,7 +685,7 @@
                             <div class="h-[40px] order-6"></div>
                             <!-- btn -->
                             <div class="flex flex-row items-start gap-[15px] order-7 lg:w-[315px] lg:h-[46px]">
-                                <a href="https://api.whatsapp.com/send?phone=628978378911&text=`Isi sendiri,cape ngetik kode`"
+                                <a href="https://api.whatsapp.com/send?phone=628978378911&text=`Love you, ayang gantengg`"
                                     target="_blank"
                                     class="rounded-md py-2 px-4 bg-primary2
                                  text-dark font-header font-semibold transition-all hover:bg-primary2hover dark:text-slate-900 ">
